# pml

./: .gitignore  Makefile.am  README.md  configure.ac
NTL-extras/mat_lzz_pX_extra/: mat_lzz_pX_approximant.h
NTL-extras/mat_lzz_pX_extra/src/: mat_lzz_pX_approximant.cpp  mat_lzz_pX_pmbasis.cpp
NTL-extras/mat_lzz_pX_extra/test/: test_vs_gcd.cpp
NTL-extras/mat_lzz_pX_extra/timings/: time_one_multiply.cpp  time_pmbasis.cpp
flint-extras/: ISSUES.txt  Makefile
flint-extras/fmpz_extra/src/: fmpz_multimod_CRT_CRT.c  fmpz_multimod_CRT_init.c  fmpz_multimod_CRT_reduce.c  fmpz_multimod_naive_init.c  fmpz_multimod_naive_reduce.c
flint-extras/fmpz_mat_extra/src/: Makefile
flint-extras/lib/: Makefile.am  makelib
flint-extras/nmod_extra/: nmod_extra.h
flint-extras/nmod_extra/src/: nmod_multimod_CRT_reduce.c
flint-extras/nmod_extra/test/: Makefile  test_multimod_CRT_CRT.c  test_multimod_CRT_reduce.c
flint-extras/nmod_mat_extra/src/: nmod_mat_rand.c
flint-extras/nmod_mat_extra/test/: Makefile  test_nullspace.c  test_rand.c
flint-extras/nmod_mat_poly_extra/test/: Makefile  test_get_set.save  test_mbasis.c  test_mem.c  test_mul_coeff.c  test_one_zero.c  test_shift.c
flint-extras/nmod_mat_poly_extra/timings/: Makefile  time_mbasis.c
flint-extras/nmod_poly_extra/src/: Makefile  nmod_sd_fft_evaluate.c  nmod_sd_fft_init.c  nmod_sd_fft_interpolate.c
flint-extras/nmod_poly_extra/src/SAVE/: nmod_sd_fft_evaluate.c  nmod_sd_fft_init.c
flint-extras/nmod_poly_extra/test/: Makefile  test_sd_fft_evaluate.c  test_sd_fft_interpolate.c
flint-extras/nmod_poly_mat_extra/: nmod_poly_mat_forms.h  nmod_poly_mat_multiply.h  nmod_poly_mat_utils.h
flint-extras/nmod_poly_mat_extra/src/: nmod_poly_mat_hermite.c  nmod_poly_mat_middle_product_geometric.c  nmod_poly_mat_middle_product_tft.c  nmod_poly_mat_mul_geometric.c  nmod_poly_mat_mul_tft.c  nmod_poly_mat_weak_popov.c
flint-extras/nmod_poly_mat_extra/src/SAVE/: nmod_poly_mat_middle_product_tft.c
flint-extras/nmod_poly_mat_extra/test/: Makefile  test_degree_matrix.c  test_dft.c  test_mat_poly.c  test_mbasis.c  test_mbasis1.c  test_pivot_profile.c  test_pmbasis.c  test_rand.c  test_rdeg_cdeg.c  testing_collection.h
flint-extras/nmod_vec_extra/src/: Makefile  nmod_vec_dot2_small_modulus.c  nmod_vec_dot_product.c  nmod_vec_dot_product_multi.c  nmod_vec_dot_small_modulus.c  nmod_vec_primes.c
flint-extras/nmod_vec_extra/src/SAVE/: nmod_vec_dot_product.c
flint-extras/nmod_vec_extra/test/: test_nmod_vec_dot2_small_modulus.c  test_rand.c
flint-extras/sagemath_extra/test/: Makefile
flint-extras/tests/: Makefile.am
include/: nmod_poly_mat_forms.h
mapml/: Makefile.am  Maple_check.mw
mapml/maple/: Makefile.am  mapml.mpl.bak
mapml/src/: Makefile.am  conversion.c  matpoly_export.c
ntl-extras/: ISSUES-SOLUTIONS.txt  ISSUES-TESTS.txt
ntl-extras/lzz_pX_CRT/src/: Makefile  lzz_pX_Multipoint.cpp
ntl-extras/lzz_pX_CRT/test/: test_geometric_vector_operations.cpp
ntl-extras/lzz_pX_seq/test/: Makefile
ntl-extras/magma_output/src/: Makefile
ntl-extras/mat_lzz_pX_extra/src/: Makefile  mat_lzz_pX_linsolve.cpp  mat_lzz_pX_reduction.cpp  mat_lzz_pX_sequence.cpp
ntl-extras/mat_lzz_pX_extra/test/: Makefile  test_invmodcomp.cpp  test_linsolve_series.cpp  test_modcomp.cpp  test_reduction.cpp  test_vs_gcd.cpp
ntl-extras/mat_lzz_p_extra/test/: Makefile
ntl-extras/structured_lzz_p/src/: Makefile
ntl-extras/util/src/: Makefile
